# plasma-blind

./: Cargo.toml  README.md
aggregator/: Cargo.toml
aggregator/benches/: aggregator_bench.rs
aggregator/src/: circuits.rs  lib.rs
client/: Cargo.toml
client/benches/: client_bench.rs
client/src/: lib.rs
client/src/balance/: balance_inputs.rs  balance_state.rs  circuit.rs  mod.rs
client/src/circuits/: balance_inputs.rs  balance_state.rs  circuit.rs  client.rs  external_inputs.rs  mod.rs
client/src/transaction/: mod.rs
core/: Cargo.toml
core/src/: circuit.rs  config.rs  errs.rs  lib.rs
core/src/datastructures/: mod.rs
core/src/datastructures/block/: constraints.rs  mod.rs
core/src/datastructures/blocktree/: constraints.rs  mod.rs
core/src/datastructures/deposits/: mod.rs
core/src/datastructures/keypair/: constraints.rs  mod.rs
core/src/datastructures/noncemap/: constraints.rs  mod.rs
core/src/datastructures/nullifier/: constraints.rs  mod.rs
core/src/datastructures/publickeymap/: constraints.rs  mod.rs
core/src/datastructures/shieldedtx/: constraints.rs  mod.rs
core/src/datastructures/signerlist/: constraints.rs  mod.rs
core/src/datastructures/transaction/: constraints.rs  mod.rs
core/src/datastructures/transparenttx/: constraints.rs  mod.rs
core/src/datastructures/txtree/: constraints.rs  mod.rs
core/src/datastructures/user/: constraints.rs  mod.rs
core/src/datastructures/utxo/: constraints.rs  mod.rs
core/src/datastructures/utxo/proof/: constraints.rs  mod.rs
core/src/datastructures/withdrawals/: mod.rs
core/src/primitives/: mod.rs  schnorr.rs
core/src/primitives/accumulator/: constraints.rs
core/src/primitives/crh/: constraints.rs  mod.rs  utils.rs
core/src/primitives/sparsemt/: constraints.rs  mod.rs
core/src/primitives/zk/: mod.rs
core/src/utils/: mod.rs
paper/: .gitignore  ack.tex  acronyms.tex  bibliography.bib  construction.tex  implementation.tex  macros.tex  main.tex  overview.tex  packages.tex
paper/algorithms/: aggregator_circuit.tex  prepare_trees.tex  sign_send.tex  user_circuit.tex
