[package]
name = "client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
core = { path = "../core/" }
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-std = { workspace = true }
ark-crypto-primitives = { workspace = true, features = ["constraints", "crh", "sponge"] }
ark-bn254 = { workspace = true }
console_error_panic_hook = { version = "0.1.7", optional = true }
ark-grumpkin = { workspace = true }
ark-r1cs-std = { workspace = true }
ark-relations = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
web-time = "1.1.0"
js-sys = "0.3.77"
ark-serialize = { workspace = true }
